--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,29 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <section class="gallery-section">
+        <div class="container">
+          <div class="form-wraper">
+            <form class="form js-form">
+              <label>
+                <input
+                  type="text"
+                  name="search-text"
+                  placeholder="Search images..."
+                  required
+                />
+              </label>
+              <button type="submit">Search</button>
+            </form>
+          </div>
+          <ul class="gallery js-gallery"></ul>
+        </div>
+      </section>
+      <div class="loader-container">
+        <span class="loader js-loader hidden"></span>
+      </div>
     </main>
-
-    <load src="./partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
